// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Choiceboxes /> renders correctly 1`] = `
<div
  className="choice-boxes -teal"
>
  <button
    className="choice-box -active"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      Personal
    </span>
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      Business
    </span>
  </button>
</div>
`;

exports[`<Choiceboxes /> renders correctly 2`] = `
<div
  className="choice-boxes -teal"
>
  <button
    className="choice-box -active"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      13
    </span>
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      23
    </span>
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      43
    </span>
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      45
    </span>
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      25763
    </span>
  </button>
</div>
`;

exports[`<Choiceboxes /> renders correctly 3`] = `
<div
  className="choice-boxes -black"
>
  <button
    className="choice-box -active"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      13
    </span>
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      23
    </span>
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      45
    </span>
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      47
    </span>
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    <span
      className="choice-label"
    >
      25763
    </span>
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    type="button"
  >
    clear
  </button>
</div>
`;
